--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
+git+https://github.com/pyrogram/pyrogram@master
 pyrogram==1.3.6
-py-tgcalls==2.1.0
+py-tgcalls==0.8.1rc1
 parse-torrent-name
 tgcrypto
 yt-dlp
