--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-git+https://github.com/pyrogram/pyrogram@master
-pyrogram==1.3.6
-py-tgcalls==0.8.1rc1
+pyrogram==2.0.106
+py-tgcalls==0.9.7
 parse-torrent-name
 tgcrypto
 yt-dlp
