--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 pyrogram==2.0.106
 py-tgcalls==0.9.7
-
+aiohttp
 parse-torrent-name
 tgcrypto
 yt-dlp
@@ -16,4 +16,3 @@ apscheduler
 python-dotenv
 Flask==2.2.2
 gunicorn==20.1.0
-aiohttp==3.8.4
