--- a/package.json
+++ b/package.json
@@ -1,18 +1,43 @@
 {
-  "name": "node-js-getting-started",
-  "version": "0.3.0",
-  ...
-  "engines": {
-    "node": "18.x || 16.x"
+
+  "name": "starter-express-api",
+
+  "version": "1.0.0",
+
+  "description": "",
+
+  "main": "index.js",
+
+  "scripts": {
+
+    "start": "node index.js"
+
   },
+
+  "repository": {
+
+    "type": "git",
+
+    "url": "git+https://github.com/cyclic-software/starter-express-api.git"
+
+  },
+
+  "author": "",
+
+  "license": "ISC",
+
+  "bugs": {
+
+    "url": "https://github.com/cyclic-software/starter-express-api/issues"
+
+  },
+
+  "homepage": "https://github.com/cyclic-software/starter-express-api#readme",
+
   "dependencies": {
-    "ejs": "^3.1.5",
-    "express": "^4.15.2"
-  },
-  ...
+
+    "express": "^4.18.2"
+
+  }
+
 }
-$ node --version
-v18.7.0
-heroku buildpacks
-=== issuetriage Buildpack URLs
-1. heroku/nodejs
