--- a/package.json
+++ b/package.json
@@ -1,43 +1,5 @@
 {
-
-  "name": "starter-express-api",
-
-  "version": "18.16.1",
-
-  "description": "",
-
-  "main": "index.js",
-
-  "scripts": {
-
-    "start": "node index.js"
-
-  },
-
-  "repository": {
-
-    "type": "git",
-
-    "url": "git+https://github.com/cyclic-software/starter-express-api.git"
-
-  },
-
-  "author": "",
-
-  "license": "ISC",
-
-  "bugs": {
-
-    "url": "https://github.com/cyclic-software/starter-express-api/issues"
-
-  },
-
-  "homepage": "https://github.com/cyclic-software/starter-express-api#readme",
-
-  "dependencies": {
-
-    "express": "^4.18.2"
-
+  "engines": {
+    "node": ">=16.0"
   }
-
 }
