--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "VCPlayerBot",
+    "name": "RICHA_ANGEL",
     "description": "Telegram bot to stream video in telegram VC",
     "repository": "https://github.com/kumarmanish21/RICHA_ANGEL",
     "stack": "container",
